metadata/force-app/main/default/objects/CustomName_wRWOI__c/CustomName_wRWOI__c.object-meta.xml
<CustomObject>
    <description>Description_wcynx</description>
    <label>CustomLabel_MJiLe</label>
    <nameField>
        <label>CustomLabel_MJiLe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MJiLes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>