metadata/force-app/main/default/objects/CustomName_wRWOI__c/fields/CustomField_ikvos__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ikvos__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldeGSXY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>